--- a/cadastrar.html
+++ b/cadastrar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,12 +41,26 @@
             </section>
             
             <section class="btncontato">
-                <a href="cadastrar.html">
+                <a href="Login.html">
                     <button  class="botaologin">Login</button>
                 </a>
 
             </section>
         </div>
+        </header>
+
+        <div class="cadastro">faça seu cadastro</div>
+        <input type="name" placeholder="nome">
+       <input type="email" placeholder="email">
+       <input type="senha" placeholder="senha">
+       <input type="confirmesenha" placeholder="comfirme sua senha">
+     <div><button class="bntok">OK</button></div>
+
+       <footer>
+
+
+       </footer>
+
 
 </body>
 </html>
