--- a/cadastrar.html
+++ b/cadastrar.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li><a href="/">IINICIO</a></li>
                         <li><a href="Projetos.html">Projetos</a></li>
-                        <li><a href="cadastrar.html">Cadastro</a></li>
+                        <li><a href="cadastrar.html">Cafastro</a></li>
                     </ul>
                 
                 </nav>
