--- a/Projetos.html
+++ b/Projetos.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li><a href="/">Inicio</a></li>
                         <li><a href="Projetos.html">Projetos</a></li>
-                        <li><a href="#">Cadastro</a></li>
+                        <li><a href="cadastrar.html">Cadastro</a></li>
                     </ul>
                 
                 </nav>
@@ -41,7 +41,7 @@
             </section>
             
             <section class="btncontato">
-                <a href="cadastrar.html">
+                <a href="Login.html">
                     <button  class="botaologin">Login</button>
                 </a>
 
