--- a/Login.html
+++ b/Login.html
@@ -31,7 +31,7 @@
                
                 <nav>
                     <ul>
-                        <li><a href="/">Inicio</a></li>
+                        <li><a href="/"><i class="bi bi-house-fill"></i></a></li>
                         <li><a href="Projetos.html">Projetos</a></li>
                         <li><a href="cadastrar.html">Cadastro</a></li>
                     </ul>
@@ -51,8 +51,8 @@
 
       <div class="pai">
 
-        <h1 class="faca">Faça o seu login</h1>
-        <form class="form">
+          <h1 class="faca">Faça o seu login ja</h1>
+          <form class="form">
    
     <input type="email" placeholder="email"/>
     <input type="password" placeholder="password" />
