--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                
                 <nav>
                     <ul>
-                        <li><a href="/">IINICIO</a></li>
+                        <li><a href="/"><i class="bi bi-house-fill"></i></a></li>
                         <li><a href="Projetos.html">Projetos</a></li>
                         <li><a href="cadastrar.html">Cadastro</a></li>
                     </ul>
@@ -134,6 +134,18 @@ Olhar para o trabalho das ONGs de forma séria é uma necessidade urgente. Elas 
 <section>
 
 </section>
+<footer class="rodape">
+<img src="img/logo.png">
+<p>AidVerse</p>
+
+<ul class="rodapeLista">
+                        <li ><a href="/"><i class="bi bi-house-fill"></i></a></li>
+                        <li><a href="Projetos.html">Projetos</a></li>
+                        <li><a href="cadastrar.html">Cadastro</a></li>
+                    </ul>
+
+
+</footer>
     
 </body>
 
