--- a/Projetos.html
+++ b/Projetos.html
@@ -31,7 +31,7 @@
                
                 <nav>
                     <ul>
-                        <li><a href="/">Inicio</a></li>
+                        <li><a href="/"><i class="bi bi-house-fill"></i></a></li>
                         <li><a href="Projetos.html">Projetos</a></li>
                         <li><a href="cadastrar.html">Cadastro</a></li>
                     </ul>
