--- a/cadastrar.html
+++ b/cadastrar.html
@@ -49,6 +49,13 @@
         </div>
         </header>
         
+        <input type="checkbox" class="checkBox" id="cheK">
+    <label for="cheK" class="label">
+    <i class="bi bi-moon-fill"></i>
+    <i class="bi bi-sun"></i>
+    <div class="ball"> </div>
+</label>
+        
 <div class="cadastro">
 
     <div aria-label="faça seu cadastro" class="div1">Faça seu Cadastro</div>
